dom/canvas/WebGLParent.h
@@ -35,6 +35,12 @@ class WebGLParent : public PWebGLParent, public SupportsWeakPtr {
 
   using IPCResult = mozilla::ipc::IPCResult;
 
+  template <class ResolveT>
+  IPCResult RecvPing(const ResolveT& Resolve) {
+    Resolve(void_t{});
+    return IPC_OK();
+  }
+
   IPCResult RecvDispatchCommands(mozilla::ipc::Shmem&&, uint64_t);
   IPCResult RecvTexImage(uint32_t level, uint32_t respecFormat,
                          const uvec3& offset, const webgl::PackingInfo&,
